Added some subsections

--- a/final_report.tex
+++ b/final_report.tex
@@ -40,7 +40,15 @@ Potsdam\\
  \huge \bf Servo
 \end{center}
 
-...\\
+\section{Application Survey}
+
+
+\subsection{Which development paradigm? Which developmentlanguage(s)?}
+Rust. Other packages with different langauges.\footnote{[citation needed]}\subsection{Requirements? Specification? Documentation? Other artefacts available?}
+Nope.\subsection{Current testing status, approach? Bug repositories?}
+Fully tested. Rust devs are better than Jeesus.\subsection{What is your current personal involvement in theapplication? Developer, tester, user, etc.?}
+Aspiring user.\subsection{Document these findings in a summary for your project report at the end of the semester}
+Done\\
 
 The End
 
