more stuff copied from slides

--- a/final_report.tex
+++ b/final_report.tex
@@ -11,7 +11,7 @@
 \geometry{top=24mm,textheight=245mm,textwidth=160mm,heightrounded,right=27mm,head=14.5pt}
 
 
-\renewcommand{\labelenumi}{\alph{enumi})}
+%\renewcommand{\labelenumi}{\alph{enumi})}
 \setlength{\parindent}{0mm}
 
 
@@ -24,9 +24,7 @@
 Testen, Verifizieren, Analysieren\\
 von Software WS 15/16\\
 ~\\
-%%%%%%%%%%%%%%%%%% HIER NAMEN EINTRAGEN! %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \textbf{Johannes Linke, David Schumann}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{minipage}
 ~
 \begin{minipage}{0.30\textwidth}
@@ -43,14 +41,29 @@ Potsdam\\
 \section{Application Survey}
 
 
-\subsection{Which development paradigm? Which developmentlanguage(s)?}
-Rust. Other packages with different langauges.\footnote{[citation needed]}\subsection{Requirements? Specification? Documentation? Other artefacts available?}
-Nope.\subsection{Current testing status, approach? Bug repositories?}
-Fully tested. Rust devs are better than Jeesus.\subsection{What is your current personal involvement in theapplication? Developer, tester, user, etc.?}
-Aspiring user.\subsection{Document these findings in a summary for your project report at the end of the semester}
+\subsection*{Which development paradigm? Which developmentlanguage(s)?}
+Rust. Other packages with different langauges.\footnote{[citation needed]}\subsection*{Requirements? Specification? Documentation? Other artefacts available?}
+Nope.\subsection*{Current testing status, approach? Bug repositories?}
+Fully tested. Rust devs are better than Jeesus.\subsection*{What is your current personal involvement in theapplication? Developer, tester, user, etc.?}
+Aspiring user.\subsection*{Document these findings in a summary for your project report at the end of the semester}
 Done\\
 
-The End
+\section{Initial Test Plan}
+\subsection*{Discuss \& evaluate five V\&V questions}
+\begin{enumerate}
+  \item When do verification and validation start? When are they complete?
+  \item What particular techniques should be applied during development?
+  \item How can we assess the readiness of a product?
+  \item How can we control the quality of successive releases?
+  \item How can the development process itself be improved?
+\end{enumerate}
+\subsection*{Consider different test classifications, discuss \& evaluate these different test approaches w.r.t. your application:}
+• Validation vs. Defect Testing
+• Development, Release, User Testing
+• Unit/Component,Integration,SystemTesting
+\subsection*{Consider available artefacts, discuss \& evaluate potentials w.r.t. coverage-based testing for your application}
+\subsection*{Develop \& document initial test plan based on your findings}
+
 
 \end{document}
 
