--- a/final_report.tex
+++ b/final_report.tex
@@ -49,7 +49,7 @@ Aspiring user.\subsection*{Document these findings in a summary for your projec
 Done\\
 
 \section{Initial Test Plan}
-\subsection*{Discuss \& evaluate five V\&V questions}
+\subsection{Discuss \& evaluate five V\&V questions}
 \begin{enumerate}
   \item When do verification and validation start? When are they complete?
   \item What particular techniques should be applied during development?
@@ -57,12 +57,14 @@ Done\\
   \item How can we control the quality of successive releases?
   \item How can the development process itself be improved?
 \end{enumerate}
-\subsection*{Consider different test classifications, discuss \& evaluate these different test approaches w.r.t. your application:}
+\subsection{Consider different test classifications, discuss \& evaluate these different test approaches w.r.t. your application:}
 • Validation vs. Defect Testing
 • Development, Release, User Testing
 • Unit/Component,Integration,SystemTesting
-\subsection*{Consider available artefacts, discuss \& evaluate potentials w.r.t. coverage-based testing for your application}
-\subsection*{Develop \& document initial test plan based on your findings}
+\subsection{Consider available artefacts, discuss \& evaluate potentials w.r.t. coverage-based testing for your application}
+\subsection{Develop \& document initial test plan based on your findings}
+
+\section{Test automation}
 
 
 \end{document}
