add third slide

--- a/final_report.tex
+++ b/final_report.tex
@@ -66,6 +66,14 @@ Done\\
 
 \section{Test automation}
 
+\subsection*{Find, experiment and evaluate test tools appropriate for your application}
+
+\subsection*{Important parameters: development language, field of application}
+
+\subsection*{Good overview of open source testing tools: http://www.opensourcetesting.org/}
+
+\subsection*{Most important automation possibilities: Test case execution & management, Coverage measurement}
+
 
 \end{document}
 
