fixing some layouting

--- a/final_report.tex
+++ b/final_report.tex
@@ -41,11 +41,17 @@ Potsdam\\
 \section{Application Survey}
 
 
-\subsection*{Which development paradigm? Which developmentlanguage(s)?}
-Rust. Other packages with different langauges.\footnote{[citation needed]}\subsection*{Requirements? Specification? Documentation? Other artefacts available?}
-Nope.\subsection*{Current testing status, approach? Bug repositories?}
-Fully tested. Rust devs are better than Jeesus.\subsection*{What is your current personal involvement in theapplication? Developer, tester, user, etc.?}
-Aspiring user.\subsection*{Document these findings in a summary for your project report at the end of the semester}
+\subsection*{Which development paradigm? Which development
+language(s)?}
+Rust. Other packages with different langauges.\footnote{[citation needed]}
+\subsection*{Requirements? Specification? Documentation? Other artefacts available?}
+Nope.
+\subsection*{Current testing status, approach? Bug repositories?}
+Fully tested. Rust devs are better than Jeesus.
+\subsection*{What is your current personal involvement in the
+application? Developer, tester, user, etc.?}
+Aspiring user.
+\subsection*{Document these findings in a summary for your project report at the end of the semester}
 Done\\
 
 \section{Initial Test Plan}
@@ -58,11 +64,16 @@ Done\\
   \item How can the development process itself be improved?
 \end{enumerate}
 \subsection{Consider different test classifications, discuss \& evaluate these different test approaches w.r.t. your application:}
-• Validation vs. Defect Testing
-• Development, Release, User Testing
-• Unit/Component,Integration,SystemTesting
-\subsection{Consider available artefacts, discuss \& evaluate potentials w.r.t. coverage-based testing for your application}
-\subsection{Develop \& document initial test plan based on your findings}
+
+• Validation vs. Defect Testing
+
+• Development, Release, User Testing
+
+• Unit/Component,Integration,SystemTesting
+
+\subsection{Consider available artefacts, discuss \& evaluate potentials w.r.t. coverage-based testing for your application}
+
+\subsection{Develop \& document initial test plan based on your findings}
 
 \section{Test automation}
 
@@ -72,7 +83,7 @@ Done\\
 
 \subsection*{Good overview of open source testing tools: http://www.opensourcetesting.org/}
 
-\subsection*{Most important automation possibilities: Test case execution & management, Coverage measurement}
+\subsection*{Most important automation possibilities: Test case execution \& management, Coverage measurement}
 
 
 \end{document}
