--- a/final_report.tex
+++ b/final_report.tex
@@ -43,11 +43,11 @@ Potsdam\\
 
 \subsection*{Which development paradigm? Which development
 language(s)?}
-Rust. Other packages with different langauges.\footnote{[citation needed]}
+Rust. Other packages with different langauges.
 \subsection*{Requirements? Specification? Documentation? Other artefacts available?}
 Nope.
 \subsection*{Current testing status, approach? Bug repositories?}
-Fully tested. Rust devs are better than Jeesus.
+- Scheduled in Q4 2015 for alpha release ``that just works'' (mobile, but also other platforms)\footnote{https://github.com/servo/servo/wiki/Roadmap}
 \subsection*{What is your current personal involvement in the
 application? Developer, tester, user, etc.?}
 Aspiring user.
