--- a/final_report.tex
+++ b/final_report.tex
@@ -45,8 +45,13 @@ Potsdam\\
 language(s)?}
 Rust. Other packages with different langauges.
 \subsection*{Requirements? Specification? Documentation? Other artefacts available?}
-Nope.
+Servo is an open source project hosted on github. As most of these project do, the core developers have established a certain github workflow \footnote{https://github.com/servo/servo/wiki/Github-workflow}. Bla Bla. Every Pull Request needs to pass the contribution checklist \footnote{https://github.com/servo/servo/blob/master/CONTRIBUTING.md}\\
+
+Also hosted on github the servo wiki \footnote{https://github.com/servo/servo/wiki} can be found. It documents blablabla
+
 \subsection*{Current testing status, approach? Bug repositories?}
+Git hubs issue tracker \footnote{https://github.com/features} is used to track bugs and link the appropriate fixes to them.
+
 - Scheduled in Q4 2015 for alpha release ``that just works'' (mobile, but also other platforms)\footnote{https://github.com/servo/servo/wiki/Roadmap}
 \subsection*{What is your current personal involvement in the
 application? Developer, tester, user, etc.?}
