--- a/final_report.tex
+++ b/final_report.tex
@@ -45,14 +45,16 @@ Potsdam\\
 language(s)?}
 Rust. Other packages with different langauges.
 \subsection*{Requirements? Specification? Documentation? Other artefacts available?}
-Servo is an open source project hosted on github. As most of these project do, the core developers have established a certain github workflow \footnote{https://github.com/servo/servo/wiki/Github-workflow}. Bla Bla. Every Pull Request needs to pass the contribution checklist \footnote{https://github.com/servo/servo/blob/master/CONTRIBUTING.md}\\
+Servo is an open source project hosted on GitHub. As most of these project do, the core developers have established a certain GitHub workflow \footnote{https://github.com/servo/servo/wiki/Github-workflow}. Bla Bla. Every Pull Request needs to pass the contribution checklist \footnote{https://github.com/servo/servo/blob/master/CONTRIBUTING.md}\\
 
 Also hosted on github the servo wiki \footnote{https://github.com/servo/servo/wiki} can be found. It documents blablabla
 
 \subsection*{Current testing status, approach? Bug repositories?}
-Git hubs issue tracker \footnote{https://github.com/features} is used to track bugs and link the appropriate fixes to them.
+- GitHub's issue tracker \footnote{https://github.com/features} is used to track bugs and link the appropriate PRs fixing them to them.
+- Mozilla's mach system is used for testing.(Testing guide\footnote{https://github.com/servo/servo/wiki/Testing})
 
-- Scheduled in Q4 2015 for alpha release ``that just works'' (mobile, but also other platforms)\footnote{https://github.com/servo/servo/wiki/Roadmap}
+
+- Servo is scheduled in Q4 2015 for alpha release ``that just works'' (mobile, but also other platforms)\footnote{https://github.com/servo/servo/wiki/Roadmap}
 \subsection*{What is your current personal involvement in the
 application? Developer, tester, user, etc.?}
 Aspiring user.
