--- a/final_report.tex
+++ b/final_report.tex
@@ -45,9 +45,9 @@ Potsdam\\
 language(s)?}
 Rust. Other packages with different langauges.
 \subsection*{Requirements? Specification? Documentation? Other artefacts available?}
-Servo is an open source project hosted on GitHub. As most of these project do, the core developers have established a certain GitHub workflow \footnote{https://github.com/servo/servo/wiki/Github-workflow}. Bla Bla. Every Pull Request needs to pass the contribution checklist \footnote{https://github.com/servo/servo/blob/master/CONTRIBUTING.md}\\
+Servo is an open source project hosted on GitHub. As most of these project do, the core developers have established a certain GitHub workflow \footnote{https://github.com/servo/servo/wiki/Github-workflow}. It consists of... bla. Every Pull Request needs to pass the contribution checklist \footnote{https://github.com/servo/servo/blob/master/CONTRIBUTING.md}\\
 
-Also hosted on github the servo wiki \footnote{https://github.com/servo/servo/wiki} can be found. It documents blablabla
+Also hosted on github the servo wiki \footnote{https://github.com/servo/servo/wiki} can be found. It documents... bla.
 
 \subsection*{Current testing status, approach? Bug repositories?}
 - GitHub's issue tracker \footnote{https://github.com/features} is used to track bugs and link the appropriate PRs fixing them to them.
@@ -65,7 +65,15 @@ Done\\
 \subsection{Discuss \& evaluate five V\&V questions}
 \begin{enumerate}
   \item When do verification and validation start? When are they complete?
+  
+  V \& V starts with the begining of the project. As with many open source project that are developed by the community, the stakeholder or ``customer'' is the community itself. Which means that developer and customer are often the same person. In the case of servo the software is validated in bi-weekly meetings\footnote{https://github.com/servo/servo/wiki/Meetings} where both short-term next steps and long term milestones are discussed.
+  
+  Verification is done through an extensive testing system. It is maintained by every developer as every code change needs to be accompanied by a test before it is merged into the code base. This test suite runs on every reviewed pull request, via two build servers (bors-servo\footnote{https://github.com/bors-servo} and buildbot\footnote{http://servo-buildbot.pub.build.mozilla.org/}). This ensures that no new bugs are introduced into the system.
+  
+V \& V will never be complete. Even after the release there will always be bigfixes or new features that need to be tested as well. One could argue that V \& V ends when the project gets abandoned but you can hardly call that a complete state.
   \item What particular techniques should be applied during development?
+  
+  The Rust language itself comes with a testing blahblah.
   \item How can we assess the readiness of a product?
   \item How can we control the quality of successive releases?
   \item How can the development process itself be improved?
