ubuntu is not debian

--- a/final_report.tex
+++ b/final_report.tex
@@ -116,7 +116,7 @@ V \& V will never be complete. Even after the release there will always be bigfi
 
 - apt-get install kcov yields old binary. We need to install from master.
 
-- kcov still errors. We try a random hint for ubuntu jessie to install it with libbfd-dev
+- kcov still errors. We try a random hint for debian jessie to install it with libbfd-dev
 
 - First coverage created by just starting the servo binary with kcov (and necessary --verify flag)\\
 
