--- a/final_report.tex
+++ b/final_report.tex
@@ -120,7 +120,7 @@ V \& V will never be complete. Even after the release there will always be bigfi
 
 - First coverage created by just starting the servo binary with kcov (and necessary --verify flag)\\
 
-Helper Script:
+- To do this we moved the servo binary to servo\_orig and placed our own helper script in its place:
 
 \lstset{language=Python}  
 \begin{lstlisting}
