Paste in second milestone

--- a/final_report.tex
+++ b/final_report.tex
@@ -101,5 +101,19 @@ V \& V will never be complete. Even after the release there will always be bigfi
 \subsection*{Most important automation possibilities: Test case execution \& management, Coverage measurement}
 
 
+\section{ASA}
+
+\subsection*{Search for tools performing ASA}
+
+(Metrics, Tables and Diagrams, Programming Style, Code Smells, Bug patterns, Faults) for the software artefacts involved in your project \\
+– Check IDE, test execution framework, compiler options, … for ASA support \\
+– In case no or few tools are available: which kind of ASA techniques would be desirable? How costly would their implementation be? Possibly implement some ASA technique suitable for your project \\
+
+\subsection*{Experiment with and evaluate ASA tools w.r.t. your project}
+– How good is ASA in detecting faults in your project?\\
+– How can ASA support inspection activities in your project? \\
+– How can ASA support or complement testing in your project? \\
+
+
 \end{document}
 
